# ssearch

./: .gitignore  CMakeLists.txt  ssearch.hpp  test  test.cpp
.github/workflows/: c-cpp.yml
compile/: FileIterator.cpp  PatternCache.cpp  Search.cpp  Ssearch.cpp  WorkerThreadsPool.cpp
include/: FileIterator.hpp  PatternCache.hpp  Search.hpp  WorkerThreadsPool.hpp
singlev2/: Ssearch.hpp
tests/: ssearch_test.cpp
